<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="htHandler"
            type="xyz.mmixel.hw2.lesson2.activitiesandintents.HelloToastWithIntent" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".lesson1.HelloToastPtA">

        <Button
            android:id="@+id/button_toast"
            style="@style/button_style"
            android:onClick="@{htHandler::showToast}"
            android:text="@string/say_hello"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_count"
            style="@style/button_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="@{htHandler::countUp}"
            android:text="@string/button_label_count"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/show_count"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#FFFF00"
            android:gravity="center"
            android:text="@string/count_initial_value"
            android:textAlignment="center"
            android:textColor="@color/design_default_color_primary"
            android:textSize="160sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/button_count"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_toast" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>